# soil-moisture

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  flash_valves.sh  partitions.csv  partitions_valvess.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old  upload_bins.sh  version.txt
components/button_control/: CMakeLists.txt  button_control.c
components/calibration/: CMakeLists.txt  calibrate.c  calibrate.h
components/data/: CMakeLists.txt  data.c  data.h
components/ds18b20/examples/ds18b20-read/main/: ds18b20-read.c
components/esp32-button/src/: button.c
components/espnow_lib/: CMakeLists.txt  Kconfig.projbuild  espnow_lib.c  espnow_lib.h
components/espressif__esp_modem/port/linux/esp_netif_linux/: CMakeLists.txt
components/espressif__mdns-v1.4.0/examples/query_advertise/main/: mdns_example_main.c
components/espressif__mdns-v1.4.0/tests/host_test/main/: main.c
components/espressif__mdns-v1.4.0/tests/test_apps/main/: main.c
components/espressif__mdns-v1.4.0/tests/unit_test/main/: test_mdns.c
components/espressif__ssd1306/: ssd1306.c
components/gsm/: CMakeLists.txt  gsm.c  gsm.h
components/http_server/: CMakeLists.txt  http_server.c  http_server.h
components/i2cdev/: CMakeLists.txt  i2cdev.h
components/lcd/: CMakeLists.txt  lcd.c  lcd.h
components/ra01s/: CMakeLists.txt  Kconfig.projbuild  ra01s.c
components/ra01s/include/: ra01s.h
components/rtc/: CMakeLists.txt  i2cdev.h  rtc_operations.c  rtc_operations.h
components/sensor/: CMakeLists.txt  idf_component.yml  sensor.c  sensor.h
components/soil_comm/: CMakeLists.txt  Kconfig.projbuild  soil_comm.c  soil_comm.h
components/valve_control/: CMakeLists.txt  valve_control.c  valve_control.h
components/wifi_app/: CMakeLists.txt  wifi_app.c  wifi_app.h
main/: CMakeLists.txt  Kconfig.projbuild  MqttParser.c  MqttParser.h  Ota.c  Ota.h  Pppos.c  Pppos.h  ads1x1x.c  ads1x1x.h  app_main.c  button_control.c  button_control.h  data.c  data.h  define.h  gsm.c  gsm.h  hex_data.c  hex_data.h  http_server.c  http_server.h  i2cdev.c  idf_component.yml  lcd.c  lcd.h  mqtt.c  mqtt.h  mqtt_config.c  mqtt_config.h  mqtt_data.c  mqtt_data.h  mqtt_notify.c  mqtt_notify.h  oneshot_read_main.c  ota.c  ota.h  rtc.c  rtc.h  sensor.c  (+10 more)
partitions/: master.csv  valves.csv
spiffs_image/: index.css  jquery.min.js  ota.html  ota.js  outputs.html  outputs.js  sensors.css  sensors.html  sensors.js
webapp/: index.html  ota.css  outputs.css  outputs.html  sdkconfig  sdkconfig.old  sensors.html  sensors.js  version.txt
